@@ -348,21 +348,12 @@ main (int argc, char **argv)
     if (g_getenv ("LIGHTDM_TEST_CONFIG"))
         g_key_file_load_from_file (config, g_getenv ("LIGHTDM_TEST_CONFIG"), G_KEY_FILE_NONE, NULL);
 
-    return_lock = g_build_filename (g_getenv ("LIGHTDM_TEST_HOME_DIR"), ".xserver-returned", NULL);
-    f = fopen (return_lock, "r");
-    if (f == NULL && g_key_file_has_key (config, "test-xserver-config", "return-value", NULL))
+    if (g_key_file_has_key (config, "test-xserver-config", "return-value", NULL))
     {
         int return_value = g_key_file_get_integer (config, "test-xserver-config", "return-value", NULL);
         status_notify ("XSERVER :%d EXIT CODE=%d", display_number, return_value);
-
-        /* Write lock to stop repeatedly exiting */
-        f = fopen (return_lock, "w");
-        fclose (f);
-
         return return_value;
     }
-    if (f != NULL)
-        fclose (f);
 
     lock_path = g_strdup_printf ("/tmp/.X%d-lock", display_number);
     lock_file = open (lock_path, O_CREAT | O_EXCL | O_WRONLY, 0444);
